--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,6 +2,7 @@
 body {
   background-color: #f4f5f8;
   font-family: "Nunito Sans", sans-serif;
+  scroll-behavior: smooth;
 }
 
 .navbar__menu {
@@ -95,17 +96,17 @@ body {
     font-size: 1em;
   }
   .greet__img {
-    margin-left: auto;
-    width: 500px;
+    margin-left: -100px;
+    width: 700px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .greet {
-    margin: 1em 0 1em;
+    margin-top: 20px;
   }
   .greet__title {
-    font-size: 2.5em;
+    font-size: 1.5em;
   }
   .greet__name {
     font-size: 1.5em;
@@ -115,7 +116,287 @@ body {
   }
   .greet__img {
     width: 450px;
-    margin-right: auto;
+    margin-right: -50px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .greet {
+    margin-top: 20px;
+  }
+  .greet__title {
+    font-size: 3em;
+  }
+  .greet__name {
+    font-size: 2em;
+  }
+  .greet__subtitle {
+    font-size: 1.5em;
+  }
+  .greet__img {
+    width: 700px;
+    margin-right: -100px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .greet {
+    margin-top: 20px;
+  }
+  .greet__title {
+    font-size: 3em;
+  }
+  .greet__name {
+    font-size: 2em;
+  }
+  .greet__subtitle {
+    font-size: 1.5em;
+  }
+  .greet__img {
+    width: 700px;
+  }
+}
+
+.about-me {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.about-me__title {
+  padding: 50px;
+  text-align: center;
+}
+
+.about-me__title--primary {
+  font-weight: 600;
+  font-size: 40px;
+}
+
+.about-me__title--primary::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 3px;
+  background-color: #1f51bc;
+  margin: 10px auto;
+}
+
+.about-me__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about-me__content--img {
+  width: 2000px;
+}
+
+.about-me__content--img lottie-player {
+  margin-top: -50px;
+}
+
+.about-me__content--excerpt {
+  padding: 50px;
+}
+
+.about-me__content--excerpt p {
+  font-weight: 300;
+  font-size: 28px;
+  text-align: justify;
+}
+
+@media screen and (max-width: 576px) {
+  .about-me__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .about-me__content--excerpt {
+    padding: 50px;
+  }
+  .about-me__content--excerpt p {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .about-me__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .about-me__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.skills {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.skills__title {
+  padding: 50px;
+  text-align: center;
+}
+
+.skills__title--primary {
+  font-weight: 600;
+  font-size: 40px;
+}
+
+.skills__title--primary::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 3px;
+  background-color: #1f51bc;
+  margin: 10px auto;
+}
+
+.skills img:hover {
+  cursor: pointer;
+  background-color: #ded7f8;
+}
+
+.projects {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.projects__title {
+  padding: 50px;
+  text-align: center;
+}
+
+.projects__title--primary {
+  font-weight: 600;
+  font-size: 40px;
+}
+
+.projects__title--primary::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 3px;
+  background-color: #1f51bc;
+  margin: 10px auto;
+}
+
+.projects__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 576px) {
+  .projects__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .projects__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .projects__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.contact {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.contact__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contact__content--img img {
+  width: 200px;
+  border: #07296f 5px solid;
+}
+
+.contact__content--text {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 20px;
+}
+
+.contact__content--text h2 {
+  font-size: 3em;
+  font-weight: 700;
+  color: #1f51bc;
+}
+
+.contact__content--text h6 {
+  font-size: 1.2em;
+  font-weight: 300;
+  color: #07296f;
+  opacity: 0.6;
+}
+
+.contact__content--text p {
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+.contact__content--text span {
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 576px) {
+  .contact__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  .contact__content--img img {
+    width: 170px;
+    border: #07296f 5px solid;
+  }
+  .contact__content--text {
+    margin: 10px auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .contact__content {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  .contact__content--img img {
+    width: 170px;
+    border: #07296f 5px solid;
+  }
+  .contact__content--text {
+    margin: 10px auto;
   }
 }
 /*# sourceMappingURL=custom.css.map */
