--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -256,9 +256,19 @@ body {
   margin: 10px auto;
 }
 
+.skills img {
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  -webkit-transition: 0.3s ease-in !important;
+  transition: 0.3s ease-in !important;
+}
+
 .skills img:hover {
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(33, 33, 33, 0.2) !important;
+          box-shadow: 0px 5px 10px 0px rgba(33, 33, 33, 0.2) !important;
   cursor: pointer;
-  background-color: #ded7f8;
 }
 
 .projects {
@@ -293,6 +303,17 @@ body {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   margin: 0 auto;
+}
+
+.projects__content .card {
+  -webkit-transition: 0.3s ease-in !important;
+  transition: 0.3s ease-in !important;
+}
+
+.projects__content .card:hover {
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(33, 33, 33, 0.2) !important;
+          box-shadow: 0px 5px 10px 0px rgba(33, 33, 33, 0.2) !important;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 576px) {
@@ -398,5 +419,21 @@ body {
   .contact__content--text {
     margin: 10px auto;
   }
+}
+
+section .box {
+  width: 300px;
+  height: 500px;
+  margin: 50px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background: #fff;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+section .box:hover {
+  -webkit-box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+          box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
 }
 /*# sourceMappingURL=custom.css.map */
