--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -240,9 +240,15 @@ body {
     }
   }
 
+  img {
+    filter: grayscale(100%);
+    transition: 0.3s ease-in !important;
+  }
+
   img:hover {
+    filter: grayscale(0%);
+    box-shadow: 0px 5px 10px 0px rgba(33, 33, 33, 0.2) !important;
     cursor: pointer;
-    background-color: $quinary-color;
   }
 }
 
@@ -262,6 +268,15 @@ body {
     display: flex;
     justify-content: space-evenly;
     margin: 0 auto;
+
+    .card {
+      transition: 0.3s ease-in !important;
+    }
+
+    .card:hover {
+      box-shadow: 0px 5px 10px 0px rgba(33, 33, 33, 0.2) !important;
+      cursor: pointer;
+    }
 
     @media screen and (max-width: 576px) {
       flex-wrap: wrap;
@@ -352,5 +367,20 @@ body {
         margin: 10px auto;
       }
     }
+  }
+}
+
+section {
+  .box {
+    width: 300px;
+    height: 500px;
+    margin: 50px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    background: #fff;
+    transition: 1s;
+  }
+  .box:hover {
+    box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
   }
 }
